--- a/templet/admin.html
+++ b/templet/admin.html
@@ -97,7 +97,7 @@
   </div>
 
   <div class="blog-post-wrapper">
-    <form action="http://localhost:3000/api/postBlog" method="post">
+    <form action="http://carrygor.com/api/postBlog" method="post">
       <ul class="edit-list">
         <li class="edit-item">
           <label for="title">标题：</label>
